--- a/CODE/1_RAW_MATERIALS_PHASE/PREVIOUS_TEAM_IMPLEMENTATION/src/backend/requirements.txt
+++ b/CODE/1_RAW_MATERIALS_PHASE/PREVIOUS_TEAM_IMPLEMENTATION/src/backend/requirements.txt
@@ -5,7 +5,7 @@
 #RUN:
 
 #1.Run: python app.py
-#2.In another terminal, navigate to #src:yarn install -> yarn start
+#2.In another terminal, navigate to src:yarn install -> yarn start
 
 #LIBRARIES:
 
