--- a/CODE/1_RAW_MATERIALS_PHASE/PREVIOUS_TEAM_IMPLEMENTATION/src/backend/requirements.txt
+++ b/CODE/1_RAW_MATERIALS_PHASE/PREVIOUS_TEAM_IMPLEMENTATION/src/backend/requirements.txt
@@ -1,6 +1,6 @@
 #SETUP:
 
-#Install Python 3.11-> create a virtual #environment-> install this #requirements.txt file.
+#Install Python 3.11-> create a virtual #environment-> install this requirements.txt file.
 
 #RUN:
 
